--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mj-gulp-workflow": "^2.3.1"
+    "mj-gulp-workflow": "latest"
   },
   "dependencies": {
     "child_process": "^1.0.2"
